--- a/examples/blockchain-ports/waves/surfboard.config.json
+++ b/examples/blockchain-ports/waves/surfboard.config.json
@@ -1,5 +1,5 @@
 {
-    "ride_directory": "script",
+    "ride_directory": "scripts",
     "test_directory": "test",
     "envs": {
         "custom": {
