--- a/contracts/waves/surfboard.config.json
+++ b/contracts/waves/surfboard.config.json
@@ -27,7 +27,7 @@
             "SEED": "X"
         }
     },
-    "defaultEnv": "testnet",
+    "defaultEnv": "stagenet",
     "mocha": {
         "timeout": 60000
     }
